--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".TestFragment"></activity>
         <activity android:name=".FragmentChild" />
         <activity android:name=".addCategory" />
         <activity android:name=".HomeFragment2" />
